# Alfred

./: .gitignore  .travis.yml  .travisci.yml  00.pruebas.alf  Alfred.py  CHANGELOG  CHANGELOG.md  Cargo.toml  Dockerfile  Evaluator.py  Gruntfile.js  LICENSE  Lexer.py  Makefile  Makefile.Docs  Makefile.Linux  Parser.py  Pipfile  README.adoc  README.md  REFERENCES  References.txt  TODO.md  _Sidebar.md  alfred.cabal  alfred.py  ast.py  docs.txt  escribe.md  evaluator.py  gulpfile.js  lexer.py  main.py  options.json  package-lock.json  package.json  parser.py  requirements-dev.txt  requirements.txt  setup.py  (+1 more)
.ask/: config
.circleci/: config.yml
config/: lang.py
config/support/: en.py  es.py
core/: evaluator.py  lexer.py  parser.py
deprecated/: lexer.rs
docs/source/: conf.py  index.rst  installation.rst
docs/src/: conf.py  contribute.rst  index.rst  installation.rst  language.rst
example/: 00 - Vacío.alf  01 - Comentarios.alf  02 - Hola Batman.alf  03 - Variables.alf  04 - Matemáticas simples.alf  05 - Textos multilínea.alf  06 - Condicionales.alf  07 - Mientras.alf  08 - Fibonacci.alf  09 - Factorial.alf  bucle_infinito.alf  escribe.alf  factorial.alf  guess.alf  helloname.alf  helloworld.alf  holamundo.alf  literal_fibonacci.alf  momentos.alf  momentos_inversos.alf  multilínea.alf  pregunta.alf  prueba.alf  pruebas.alf  symbolic_fibonacci.alf  variables.alf
examples/: 00.Pruebas.alf  01.HolaBatman.alf  02.Variables.alf  03.Momentos.alf  04.Matemáticas.alf  05.Servidores.alf  05.ServidoresHTTP.alf  en.helloworld.alf  en.learn.alf  en.memories.alf  en.nmap.alf  en.variable.alf  es.aprende.alf  es.holamundo.alf  es.nmap.alf  es.recuerdos.alf  es.variables.alf  prueba.alf  pruebas.alf
examples/es/: aprende.alf  definiciones.alf  hesidohackeado.alf  holamundo.alf  recuerdos.alf
frontend/src/: frontend.coffee
grammars/: alfred-en.cson  alfred-es.cson
include/: arguments.hpp  error.hpp  io.hpp  lexer.hpp  nodes.hpp  parser.hpp  reader.hpp  utils.hpp  variables.hpp
lambda/custom/: index.js
lambda/us-east-1_ask-custom-alexa-default/: index.js  package-lock.json  package.json  test.js
lib/: arguments.cpp  arguments.py  defines.py  en-fibonacci.py  en_fibonacci.py  error.cpp  error.hpp  es_fibonacci.py  io.cpp  lexer.cpp  lexer.hpp  lexer.py  lexicon.py  morphology.py  nodes.cpp  nodes.py  parser.cpp  parser.py  parsetab.py  repl.py  std.py  symbols.py  utils.cpp  utils.hpp
lib/en/: fibonacci.py  scanning_ports.py
lib/es/: emails_hackeados.py  escaneo_de_puertos.py
models/: es-ES.json
snippets/: alfred-en.cson  alfred-es.cson
src/: Main.hs  __init__.py  alfred.py  arguments.rs  index.html  index.pug  lexer.rs  main.cpp  main.js  main.py  main.rs
src/Core/: Arguments.hs  Interpreter.hs  Language.hs  Parser.hs  Repl.hs
src/Lang/: ES.hs
src/coffee/: functions.coffee.md  main.coffee.md  methods.coffee.md  node.coffee.md  output.coffee.md  path.coffee.md  variables.coffee.md
src/core/: Arguments.hs  Interpreter.hs  Language.hs  Repl.hs  (+6 more)
test/: InterpreterSpec.hs  Main.hs  ParserSpec.hs  escribe.alf  helloworld.alf  holamundo.alf  prueba.alf
(+114 files in other folders)
