name:                   alfred
version:                0.3.0
synopsis:               Just another programming language...
homepage:               https://github.com/CosasDePuma/Alfred
license:                MIT
license-file:           LICENSE
author:                 Kike Fontán
maintainer:             @CosasDePuma <kikefontanlorenzo@gmail.com>
category:               Language
build-type:             Simple
cabal-version:          >=1.10

executable alfred
  main-is:              Main.hs
  build-depends:        base, parsec, containers
  hs-source-dirs:       src
  default-language:     Haskell2010

library
  build-depends:        base, parsec, containers
  exposed-modules:      Core.Arguments, Core.Parser, Core.Interpreter
  other-modules:        Core.Language, Core.Repl,
                        Lang.ES
  hs-source-dirs:       src
  default-language:     Haskell2010

test-suite alfred-test
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test src
  ghc-options:          -Wall
  build-depends:        base, parsec, containers, hspec, hspec-expectations, alfred
  default-language:     Haskell2010
  build-depends:        hspec-discover
