name:                alfred
version:             0.4.0
-- synopsis:            
-- description:         
homepage:            https://github.com/cosasdepuma/alfred/wiki
license:             MIT
license-file:        LICENSE
author:              Kike Fontan (@CosasDePuma)
maintainer:          kikefontanlorenzo@gmail.com
-- copyright:           
category:            Language
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable alfred
  main-is:             Main.hs
  -- other-modules:       
  other-extensions:    FlexibleContexts
  build-depends:       base >=4.8 && <4.9, parsec >=3.1 && <3.2
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
  type:                 exitcode-stdio-1.0
  main-is:              Spec.hs
  hs-source-dirs:       test src
  ghc-options:          -Wall
  build-depends:        base, parsec, hspec, hspec-expectations
  default-language:     Haskell2010
  build-depends:        hspec-discover